# FileToVideo

./: .gitignore  CMakeLists.txt  README.md  build.sh  functions.cpp  generator.cpp  main.cpp  run.sh  test.sh  vidgen.cpp
.github/workflows/: cmake-single-platform.yml
src/: main.cpp  settings.cpp  settings.h
src/decoder/: decoder.cpp  decoder.h
src/generator/: fileio.cpp  fileio.h  frame.h  generator.cpp  generator.h  hash.cpp  hash.h
src/io/: fileio.cpp  fileio.h  hash.cpp  hash.h  video_gen.cpp  video_gen.h
src/io/video/: file_input.cpp  file_input.h  video_input.cpp  video_input.h  youtube_input.cpp  youtube_input.h
src/options/: arguments.cpp  arguments.h  option.cpp  option.h
src/utils/: general.cpp  general.h  logger.cpp  logger.h  pixel.cpp  pixel.h  timer.cpp  timer.h
tests/: color.sh  custom_dimensions.sh  custom_dimensions_colored.sh  encode_decode_error.sh  encode_decoder_error.sh
tests/data/: lorem_ipsum_500p.txt
